crates/dag-macros/tests/ui/workflow_switch_case_target_not_ident.stderr
error: switch! cases must map to node aliases (e.g. `"k" => target`)
  --> tests/ui/workflow_switch_case_target_not_ident.rs:37:26
   |
37 |         cases = { "a" => "a" }
   |                          ^^^
